--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,196 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.App {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-header {
+  font-family: "Poppins", sans-serif;
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.task-list {
+  list-style-type: none;
+  padding: 0px;
+}
+
+.task {
+  border-bottom: 1px solid #e5e5e5;
+  padding: 10px;
+  padding-left: 25px;
+  display: flex;
+}
+
+form {
+  display: flex;
+  width: 100%;
+}
+
+form span {
+  justify-content: center;
+  align-items: center;
+}
+
+#task-input {
+  background-color: inherit;
+  border: none;
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
+  font-size: 12px;
+  padding: 0px;
+  margin-left: 10px;
+  width: 89%;
+}
+
+#task-input:focus {
+  outline: none;
+  border: none;
+}
+
+.task-title {
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  align-self: center;
+  margin-left: 10px;
+}
+
+.task-title-done {
+  position: relative;
+}
+
+@keyframes strike {
+  0% {
+    width: 0;
+    left: 50%;
+  }
+  100% {
+    width: 100%;
+    left: 0%;
+  }
+}
+
+.task-title-done::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  width: 100%;
+  height: 1px;
+  background: #746a6a;
+  animation: strike 150ms linear;
+}
+
+.task-checker {
+  background: inherit;
+  border: none;
+  cursor: pointer;
+  user-select: none;
+
+  width: 25px;
+  height: 25px;
+  font-size: 30px;
+  font-weight: 100;
+}
+
+.task-done::after {
+  content: url(./assets/tick.svg);
+  position: relative;
+  width: 18px;
+  left: 4px;
+  top: -23px;
+  color: #42a5e3;
+  cursor: pointer;
+  animation: spin 130ms linear;
+  display: inline-block;
+}
+
+@keyframes spin {
+  0% {
+    transform: scale(0.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.circle-not-done::after {
+  content: url(./assets/tick.svg);
+  position: relative;
+  width: 18px;
+  left: 4px;
+  top: -23px;
+  color: #42a5e3;
+  cursor: pointer;
+  animation: check 130ms linear forwards;
+  display: inline-block;
+}
+
+@keyframes check {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
+.task-done {
+  color: #746a6a;
+}
+
+.trash-icon {
+  color: rgba(0, 0, 0, 0.055);
+  user-select: none;
+}
+
+.trash-icon:hover {
+  color: rgba(0, 0, 0, 1);
+  cursor: pointer;
+}
+
+.circle-size {
+  width: 25px;
+  height: 25px;
+}
+
+.add-icon {
+  color: #757575;
+  animation: entrada 400ms;
+}
+
+@keyframes entrada {
+  0% {
+    transform: rotate(180deg);
+    color: rgba(0, 0, 0, 0.055);
+  }
+  100% {
+    transform: rotate(360deg);
+    color: #746a6a;
+  }
+}
+
+.circle-icon {
+  display: flex;
+  color: #757575;
+  animation: salida 300ms;
+}
+
+@keyframes salida {
+  0% {
+    font-size: 1px;
+  }
+  100% {
+    font-size: 24px;
+  }
 }
