--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap");
 
 :root {
   --strong-dark: #575050;
@@ -190,4 +191,92 @@
   display: flex;
   color: var(--normal-dark);
   animation: increase 300ms;
+}
+
+.controls {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.control {
+  margin-top: 30px;
+  animation: finezo 150ms linear forwards;
+}
+
+@keyframes finezo {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.time-left {
+  text-align: center;
+  font-family: "Roboto";
+  font-weight: 100;
+  font-size: 144px;
+  text-decoration: underline;
+  text-decoration-thickness: 7px;
+  text-underline-offset: 10px;
+  color: #ffffff;
+  margin-top: 40px;
+}
+
+.pomodoro-header {
+  font-family: "Roboto";
+  font-weight: bold;
+  font-size: 36px;
+  color: #ffffff;
+  text-align: center;
+}
+
+.left {
+  background-image: url(./assets/Rectangle.svg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  width: 53%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.right {
+  width: 47%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Pomodoro {
+  width: 478px;
+  height: 454px;
+  padding: 30px;
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 30px 30px 30px 0px;
+}
+
+.credits {
+  font-family: "Roboto";
+  font-weight: 100;
+  font-size: 36px;
+}
+
+.left-credits {
+  position: absolute;
+  top: 95%;
+  left: 37%;
+  color: #ffffff;
+}
+
+.right-credits {
+  position: absolute;
+  top: 95%;
+  left: 52%;
 }
