--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,11 @@
   align-items: center;
 }
 
+.Todo {
+  margin-top: 30vh;
+  max-width: 90%;
+}
+
 .todo-header {
   font-family: "Poppins", sans-serif;
   font-size: 36px;
@@ -51,7 +56,7 @@
 .task-input {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
-  font-size: 12px;
+  font-size: 16px;
   padding: 0px;
   margin-left: 10px;
   width: 89%;
@@ -67,10 +72,31 @@
 
 .task-title {
   font-family: "Poppins", sans-serif;
-  font-size: 12px;
+  font-size: 16px;
   font-weight: normal;
   align-self: center;
   margin-left: 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.task-title-not-done {
+  position: relative;
+  animation: blacktolight 150ms linear forwards;
+  animation-direction: reverse;
+}
+
+.task-title-not-done::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  width: 100%;
+  height: 1px;
+  background-color: var(--strong-dark);
+  animation: strikethrough 150ms linear forwards;
+  animation-direction: reverse;
 }
 
 .task-title-done {
@@ -200,17 +226,17 @@
 
 .control {
   margin-top: 30px;
-  animation: finezo 150ms linear forwards;
+  animation: finezo 200ms linear forwards;
 }
 
 @keyframes finezo {
   0% {
     opacity: 0;
-    transform: scale(0);
+    transform: rotateX(90deg);
   }
   100% {
     opacity: 1;
-    transform: scale(1);
+    transform: rotateX(0deg);
   }
 }
 
@@ -238,7 +264,7 @@
   background-image: url(./assets/Rectangle.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  width: 53%;
+  width: 53vw;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -246,11 +272,10 @@
 }
 
 .right {
-  width: 47%;
+  width: 47vw;
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .Pomodoro {
